# AthletePerformanceTracker

./: .env  .example_env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  init.sql
init/: init.sql
src/: main.rs
src/api/: api_doc.rs  error.rs  handlers.rs  mod.rs  responses.rs
src/db/: mod.rs  postgres_pool.rs
src/models/: error.rs  mod.rs  performance_tracker.rs  responses.rs  sportsman.rs
src/models/metrics/: biathlon.rs  mod.rs  running.rs  weight_lifting.rs  weightlifting.rs
src/service/: core.rs  mod.rs  models.rs  routes.rs
src/service/postgres/: postgres_pool.rs
src/traits/: traits.rs
