[package]
name = "AthletePerformanceTracker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
axum = "0.8.1"
log = "0.4.26"
env_logger = "0.11.6"
dotenv = "0.15.0"
serde_json = "1.0.140"
serde = { version = "1.0.218", features = ["derive"] }
sqlx = {version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls"]}
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }